update model/material editor with default materials add cornell box and default lighting to model viewer

--- a/xyTools/xyTools.vcxproj.filters
+++ b/xyTools/xyTools.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="include\MaterialEditorState.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Enumerations.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
