--- a/xyTools/xyTools.vcxproj
+++ b/xyTools/xyTools.vcxproj
@@ -103,7 +103,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>../xygine/extlibs/lib/box2d-2.3.2;../xygine/extlibs/lib/sfml;../ReleaseShared</AdditionalLibraryDirectories>
-      <AdditionalDependencies>xygine.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib;sfml-network.lib;Box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>xygine.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib;sfml-network.lib;sfml-main.lib;Box2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -128,6 +129,7 @@
     <ClCompile Include="src\SpriteEditorState.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Enumerations.hpp" />
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\MaterialEditorState.hpp" />
     <ClInclude Include="include\MenuMainState.hpp" />
