--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -60,6 +60,7 @@ set(XY_SRC
   ${XY_DIR}/mesh/RenderQuad.cpp
   ${XY_DIR}/mesh/Skeleton.cpp
   ${XY_DIR}/mesh/SkeletonAnimation.cpp
+  ${XY_DIR}/mesh/SphereBuilder.cpp
   ${XY_DIR}/mesh/SubMesh.cpp
   ${XY_DIR}/mesh/UniformBuffer.cpp
   ${XY_DIR}/mesh/VertexAttribBinding.cpp
