--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -276,6 +276,7 @@
     <ClInclude Include="include\xygine\components\TileMapLayer.hpp" />
     <ClInclude Include="include\xygine\Config.hpp" />
     <ClInclude Include="include\xygine\Console.hpp" />
+    <ClInclude Include="include\xygine\detail\Aliases.hpp" />
     <ClInclude Include="include\xygine\detail\GLCheck.hpp" />
     <ClInclude Include="include\xygine\detail\GLExtensions.hpp" />
     <ClInclude Include="include\xygine\imgui\CommonDialogues.hpp" />
