--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="src\PostBloom.cpp" />
     <ClCompile Include="src\PostBlur.cpp" />
     <ClCompile Include="src\PostChromeAb.cpp" />
+    <ClCompile Include="src\PostOldSchool.cpp" />
     <ClCompile Include="src\PostProcess.cpp" />
     <ClCompile Include="src\QuadTree.cpp" />
     <ClCompile Include="src\QuadTreeNode.cpp" />
@@ -377,6 +378,7 @@
     <ClInclude Include="include\xygine\PostBloom.hpp" />
     <ClInclude Include="include\xygine\PostBlur.hpp" />
     <ClInclude Include="include\xygine\PostChromeAb.hpp" />
+    <ClInclude Include="include\xygine\PostOldSchool.hpp" />
     <ClInclude Include="include\xygine\PostProcess.hpp" />
     <ClInclude Include="include\xygine\QuadTree.hpp" />
     <ClInclude Include="include\xygine\QuadTreeNode.hpp" />
@@ -394,6 +396,7 @@
     <ClInclude Include="include\xygine\shaders\PostChromeAb.hpp" />
     <ClInclude Include="include\xygine\shaders\PostDownSample.hpp" />
     <ClInclude Include="include\xygine\shaders\PostGaussianBlur.hpp" />
+    <ClInclude Include="include\xygine\shaders\PostOldSchool.hpp" />
     <ClInclude Include="include\xygine\shaders\Tilemap.hpp" />
     <ClInclude Include="include\xygine\spriter\Document.hpp" />
     <ClInclude Include="include\xygine\spriter\DocumentAttribute.hpp" />
