add preLoad overload to shader resource for shaders with only vertex or fragment source update OldSchool post process effect add Antique post process effect

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(XY_SRC
   ${XY_DIR}/Music.cpp
   ${XY_DIR}/ParticleAffectors.cpp
   ${XY_DIR}/PolyBatch.cpp
+  ${XY_DIR}/PostAntique.cpp
   ${XY_DIR}/PostBloom.cpp
   ${XY_DIR}/PostBlur.cpp
   ${XY_DIR}/PostChromeAb.cpp
