--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -228,6 +228,7 @@
     <ClCompile Include="src\physics\PhysicsRigidBody.cpp" />
     <ClCompile Include="src\physics\PhysicsWorld.cpp" />
     <ClCompile Include="src\PolyBatch.cpp" />
+    <ClCompile Include="src\PostAntique.cpp" />
     <ClCompile Include="src\PostBloom.cpp" />
     <ClCompile Include="src\PostBlur.cpp" />
     <ClCompile Include="src\PostChromeAb.cpp" />
@@ -375,6 +376,7 @@
     <ClInclude Include="include\xygine\physics\RigidBody.hpp" />
     <ClInclude Include="include\xygine\physics\World.hpp" />
     <ClInclude Include="include\xygine\PolyBatch.hpp" />
+    <ClInclude Include="include\xygine\PostAntique.hpp" />
     <ClInclude Include="include\xygine\PostBloom.hpp" />
     <ClInclude Include="include\xygine\PostBlur.hpp" />
     <ClInclude Include="include\xygine\PostChromeAb.hpp" />
