rearrange layout of post process headers

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -376,12 +376,12 @@
     <ClInclude Include="include\xygine\physics\RigidBody.hpp" />
     <ClInclude Include="include\xygine\physics\World.hpp" />
     <ClInclude Include="include\xygine\PolyBatch.hpp" />
-    <ClInclude Include="include\xygine\PostAntique.hpp" />
-    <ClInclude Include="include\xygine\PostBloom.hpp" />
-    <ClInclude Include="include\xygine\PostBlur.hpp" />
-    <ClInclude Include="include\xygine\PostChromeAb.hpp" />
-    <ClInclude Include="include\xygine\PostOldSchool.hpp" />
-    <ClInclude Include="include\xygine\PostProcess.hpp" />
+    <ClInclude Include="include\xygine\postprocess\Antique.hpp" />
+    <ClInclude Include="include\xygine\postprocess\Bloom.hpp" />
+    <ClInclude Include="include\xygine\postprocess\Blur.hpp" />
+    <ClInclude Include="include\xygine\postprocess\Chromeab.hpp" />
+    <ClInclude Include="include\xygine\postprocess\OldSchool.hpp" />
+    <ClInclude Include="include\xygine\postprocess\PostProcess.hpp" />
     <ClInclude Include="include\xygine\QuadTree.hpp" />
     <ClInclude Include="include\xygine\QuadTreeNode.hpp" />
     <ClInclude Include="include\xygine\Reports.hpp" />
