--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -268,6 +268,7 @@
     <ClCompile Include="src\ui\UISlider.cpp" />
     <ClCompile Include="src\ui\UITextBox.cpp" />
     <ClCompile Include="src\ui\UIWindow.cpp" />
+    <ClCompile Include="src\util\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\xygine\components\CallbackProvider.hpp" />
