add option to disable mesh renderer render passes per material add option to create depth textures on MRTs add pass for alpha blended meshes using forward rendering

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -310,6 +310,7 @@
     <ClInclude Include="include\xygine\mesh\shaders\Default.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\DeferredLighting.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\DeferredRenderer.hpp" />
+    <ClInclude Include="include\xygine\mesh\shaders\ForwardLighting.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\GeomVis.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\LightBlur.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\SSAO.hpp" />
