add read/write config files containing name/value pairs as a utility

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -123,4 +123,5 @@ set(XY_SRC
   ${XY_DIR}/ui/UITextBox.cpp
   ${XY_DIR}/ui/UIWindow.cpp
 
+  ${XY_DIR}/util/ConfigFile.cpp
   ${XY_DIR}/util/Random.cpp)
