add loading sprite sheets to xyTools sprite editor

--- a/xyTools/src/CMakeLists.txt
+++ b/xyTools/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(PROJECT_SRC
+  ${PROJECT_DIR}/AtlasWindow.cpp
   ${PROJECT_DIR}/Game.cpp
   ${PROJECT_DIR}/main.cpp
   ${PROJECT_DIR}/MaterialEditorState.cpp
