--- a/xyTools/xyTools.vcxproj.filters
+++ b/xyTools/xyTools.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\sprite editor">
+      <UniqueIdentifier>{74a04539-9691-403d-962c-6d8e87d97dd1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\sprite editor">
+      <UniqueIdentifier>{334c2021-2808-42df-899f-d8fb32f0f492}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -32,6 +38,9 @@
     </ClCompile>
     <ClCompile Include="src\SpriteEditorState.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AtlasWindow.cpp">
+      <Filter>Source Files\sprite editor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -55,6 +64,9 @@
     </ClInclude>
     <ClInclude Include="include\Enumerations.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AtlasWidow.hpp">
+      <Filter>Header Files\sprite editor</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
